--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 
 <html>
-<head>
+  <head>
   <title>Party-Planner</title>
   <script src="./index.js"></script>
-</head>
-<body>
-  
-</body>
+  </head>
+  <body>
+    <h1>PARTY TIME</h1>
+      <ul>
+
+      </ul>
+  </body>
 </html>
